[tool.poetry]
name = "ypres"
version = "1.0.0"
description = "ypres is a simple object serialization framework built for speed."
authors = ["Andrew Hankinson <andrew.hankinson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pep8 = "^1.5.7"
py = "1.4.26"
flake8 = "^6.0.0"
pyflakes = "^3.0.1"
wheel = "^0.40.0"
mypy = "^1.2.0"
ipython = "^8.13.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pycodestyle warnings
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    ## Flake8 plugins
    "UP",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C",
    # flake8-django
    "DJ",
    # flake8-bandit
    "S",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    # Ignore Pycodestyle line-length warnings, (mainly long comments).
    "E501",
    # Ignore McCabe complexity (for now).
    "C901",
]