[project]
name = "ypres"
version = "1.1.1"
description = "ypres is a simple object serialization framework built for speed."
authors = [{ name = "Andrew Hankinson", email = "andrew.hankinson@gmail.com" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
dependencies = []

[dependency-groups]
dev = [
    "py>=1.4.26",
    "wheel>=0.40.0,<0.50",
    "mypy>=1.2.0,<2",
    "ipython>=9.0.0,<10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pycodestyle warnings
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    ## Flake8 plugins
    "UP",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C",
    # flake8-django
    "DJ",
    # flake8-bandit
    "S",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    # Ignore Pycodestyle line-length warnings, (mainly long comments).
    "E501",
    # Ignore McCabe complexity (for now).
    "C901",
]

